<resources>
    <string name="app_name">CrowdFinder</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login_button_text">LOGIN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="stay_logged_in">Stay Logged In</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="nickname">Nickname</string>
    <string name="change">(change)</string>
    <string name="email">Email</string>
    <string name="metric">Metric</string>
    <string name="merica">U.S.</string>
    <string name="metric_u_s">Metric/U.S.</string>
    <string name="notify">Notifications</string>
    <string name="night_mode">Night Mode</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="location_info">
        If disabled, the app will not function properly and your location will not be accessed
    </string>
    <string name="logout">LOGOUT</string>
    <string name="currently_tracking">Currently Tracking:</string>
    <string name="name">NAME</string>
    <string name="dummy_distance">1234 Meters</string>
    <string name="distance">Distance:</string>
    <string name="nickname_hint">NICKNAME</string>
    <string name="add_friend_title">Add a Friend by Email</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="click_to_track">Click to Track</string>
    <string name="refresh">Refresh</string>
    <string name="no_one">No One!</string>
    <string name="n_a">N/A</string>
    <string name="remove_friend_title">Remove Friend?</string>
</resources>
