<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CompassFragment"
        android:background="@color/lightBlue"
>

    <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currently_tracking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
    />
    
    <TextView
            android:id="@+id/currently_tracked_friend_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:layout_below="@id/title_textview"
            android:textSize="24sp"
            android:layout_marginVertical="10dp"
    />

    <TextView
            android:id="@+id/distance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/currently_tracked_friend_textview"
            android:textSize="28sp"
    />

    <TextView
            android:id="@+id/current_distance_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dummy_distance"
            android:layout_below="@id/distance_textview"
            android:textSize="22sp"
            android:layout_marginVertical="10dp"
    />

    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/logo"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
    />

</RelativeLayout>