<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/background"
>

    <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="40dp"
            android:background="@color/logoAccent"
    />

    <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image_view"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:hint="@string/email_hint"
            android:textAlignment="center"
            android:background="@color/logoAccent"
            android:paddingVertical="10dp"
    />

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_text"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:hint="@string/password_hint"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:background="@color/logoAccent"
            android:paddingVertical="10dp"
    />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/password_edit_text"
            android:layout_centerHorizontal="true"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stay_logged_in"
                android:textSize="24sp"
                android:textStyle="bold"
        />
        <CheckBox
                android:layout_width="30dp"
                android:layout_height="match_parent"
        />
    </LinearLayout>

    <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/login_button_text"
            android:textColor="@color/logoAccent"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/linearLayout"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/loginButton"
    />

    <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sign_up_button"
            android:textColor="@color/loginButton"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_button"
    />



</RelativeLayout>