<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccountActivity"
        android:background="@color/lightBlue"
>

    <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/logo"
    />

    <EditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image_view"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:textSize="24sp"
            android:hint="@string/nickname_hint"
            android:textAlignment="center"
            android:background="@color/brightOrange"
            android:paddingVertical="10dp"
    />

    <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname_edit_text"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:hint="@string/email_hint"
            android:textAlignment="center"
            android:background="@color/brightOrange"
            android:paddingVertical="10dp"
    />

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_text"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:hint="@string/password_hint"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:background="@color/brightOrange"
            android:paddingVertical="10dp"
    />

    <EditText
            android:id="@+id/password_repeat_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:hint="@string/password_hint"
            android:textAlignment="center"
            android:background="@color/brightOrange"
            android:paddingVertical="10dp"
    />

    <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/sign_up_button"
            android:textColor="@color/brightOrange"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/darkBlue"
            android:layout_below="@id/password_repeat_edit_text"
    />

</RelativeLayout>