<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsFragment"
        android:padding="25dp"
        android:background="@color/lightBlue"
>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="24sp"
            android:layout_marginVertical="5dp"
            android:textColor="@android:color/black"
    />
    <Button
            android:id="@+id/change_nickname_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
    />

    <EditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@id/change_nickname_button"
            android:layout_marginBottom="10dp"
    />

    <TextView
            android:id="@+id/email_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="24sp"
            android:layout_marginVertical="5dp"
            android:textColor="@android:color/black"
            android:layout_below="@id/nickname_edit_text"
    />

    <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_below="@id/email_title_text_view"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
    />


    <!--<LinearLayout-->
            <!--android:layout_marginVertical="2dp"-->
            <!--android:id="@+id/distance_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/email_text_view"-->
            <!--android:orientation="horizontal"-->
    <!--&gt;-->

        <!--<TextView-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/metric_u_s"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@android:color/black"-->
        <!--/>-->
        <!--<ToggleButton-->
                <!--android:id="@+id/distance_toggle_button"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textOn="@string/metric"-->
                <!--android:textOff="@string/merica"-->
        <!--/>-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
            <!--android:layout_marginVertical="2dp"-->
            <!--android:id="@+id/notification_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/distance_layout"-->
            <!--android:orientation="horizontal"-->
    <!--&gt;-->

        <!--<TextView-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/notify"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@android:color/black"-->
        <!--/>-->
        <!--<ToggleButton-->
                <!--android:id="@+id/notification_toggle_button"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
        <!--/>-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
            <!--android:layout_marginVertical="2dp"-->
            <!--android:id="@+id/night_mode_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/notification_layout"-->
            <!--android:orientation="horizontal"-->
    <!--&gt;-->

        <!--<TextView-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/night_mode"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@android:color/black"-->
        <!--/>-->
        <!--<ToggleButton-->
                <!--android:id="@+id/night_mode_toggle_button"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
        <!--/>-->

    <!--</LinearLayout>-->

    <!--<TextView-->
            <!--android:id="@+id/location_text_description"-->
            <!--android:layout_below="@id/night_mode_layout"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/location_info"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@android:color/black"-->
    <!--/>-->

    <!--<LinearLayout-->
            <!--android:layout_marginVertical="2dp"-->
            <!--android:id="@+id/location_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/location_text_description"-->
            <!--android:orientation="horizontal"-->
    <!--&gt;-->

        <!--<TextView-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/location_sharing"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@android:color/black"-->
        <!--/>-->
        <!--<Button-->
                <!--android:id="@+id/location_button"-->
                <!--android:text="@string/settings"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
        <!--/>-->

    <!--</LinearLayout>-->

    <Button
            android:id="@+id/logout_button"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@android:color/holo_red_light"
            android:textColor="@android:color/white"
    />


</RelativeLayout>